# python-gcp-secret-manager

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
.idx/: dev.nix
src/: requirements.txt
src/surquest/GCP/secret_assessor/: __init__.py  exceptions.py  secret.py
test/secret_assessor/: test_secret.py
