[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility, secrets accessor, Google Cloud Platform, GCP
license = MIT License (MIT)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License",
    Operating System :: OS Independent

[options]
install_requires =
    google-cloud-secret-manager >= 2.10.0, < 3.0.0
    google-auth > =2.10.0, < 3.0.0
